# gta-tools

./: Cargo.toml  README.md  TODO.md  build.rs  justfile
.github/workflows/: release-on-tag.yml  release-retroactively.yml  rust.yml
src/: features.rs  gui.rs  main.rs  util.rs
src/features/: anti_afk.rs  empty_session.rs  force_close.rs  game_networking.rs  launch.rs  mod.rs
src/gui/: app.rs  colours.rs  debug.rs  mod.rs  persistent_state.rs  run.rs  settings.rs  tools.rs  ui_ext.rs
src/util/: codeberg.rs  consts.rs  countdown.rs  elevate.rs  elevation.rs  firewall.rs  log.rs  logging.rs  meta.rs  mod.rs  persistent_state.rs  system_info.rs  ui_ext.rs  win.rs
