[package]
name = "gta-tools"
version = "0.5.4"
edition = "2024"

[dependencies]
catppuccin-egui = { version = "5.5.0", default-features = false, features = [
    "egui31",
] }
eframe = { version = "0.31.1", default-features = false, features = [
    "glow",
    "default_fonts",
] }
egui_extras = { version = "0.31.1", default-features = false, features = [
    "image",
    "svg",
] }
image = { version = "0.25.6", default-features = false, features = ["png"] }
nyquest = { version = "0.1.0", features = ["blocking"] }
nyquest-backend-winrt = { version = "0.1.0", features = ["blocking"] }
open = "5.3.2"
semver = "1.0.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = { version = "0.27.1", features = ["derive"] }
sysinfo = "0.35.0"
windows = { version = "0.61.1", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security",
    "Win32_NetworkManagement_WindowsFirewall",
] }
winreg = "0.55.0"

[build-dependencies]
static_vcruntime = "2.0.0"
winresource = "0.1.20"

[profile.release]
lto = true
codegen-units = 1
