[package]
name = "gta-tools"
version = "0.7.0"
edition = "2024"

[dependencies]
catppuccin-egui = { version = "5.6.0", default-features = false, features = [
    "egui32",
] }
chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
eframe = { version = "0.32.2", default-features = false, features = [
    "glow",
    "default_fonts",
] }
egui_extras = { version = "0.32.2", default-features = false, features = [
    "image",
    "svg",
] }
image = { version = "0.25.8", default-features = false, features = ["png"] }
open = "5.3.2"
semver = "1.0.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
strum = { version = "0.27.2", features = ["derive"] }
sysinfo = "0.37.0"
ureq = { version = "3.1.0", features = ["json"] }
windows = { version = "0.62.0", features = [
    "Win32_NetworkManagement_WindowsFirewall",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
winreg = "0.55.0"

[build-dependencies]
static_vcruntime = "2.0.0"
winresource = "0.1.23"
