[package]
name = "gta-tools"
version = "0.9.0"
edition = "2024"
license = "Apache-2.0"
authors = ["futile <git@futile.eu>"]
description = "A toolset of convenient things for GTA V Online."

[dependencies]
catppuccin-egui = { version = "5.6.0", default-features = false, features = [
    "egui32",
] }
eframe = { version = "0.32.2", default-features = false, features = [
    "glow",
    "default_fonts",
] }
egui_extras = { version = "0.32.2", default-features = false, features = [
    "image",
    "svg",
] }
humantime = "2.3.0"
image = { version = "0.25.8", default-features = false, features = ["png"] }
log = "0.4.28"
open = "5.3.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
strum = { version = "0.27.2", features = ["derive"] }
windows = { version = "0.62.0", features = [
    "Win32_NetworkManagement_WindowsFirewall",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
winreg = "0.55.0"

[build-dependencies]
static_vcruntime = "2.0.0"
tauri-winres = "0.3.3"
